# email-service

backend/: Cargo.toml  README.md  env.example
backend/src/: config.rs  handlers.rs  main.rs  models.rs
backend/src/mail/: mock.rs  mod.rs  smtp.rs  traits.rs
docs/: README.md
docs/ai/: README.md
docs/backend/: README.md  routes.md
docs/database/: README.md  models.md
docs/frontend/: README.md
docs/mobile/: README.md
frontend/: README.md  eslint.config.mjs  package-lock.json  package.json
frontend/public/styles/: email-page.css  header-email.css  homepage.css  preferences.css
frontend/public/styles/email/: apple-minimal-dark.css  apple-minimal.css  gmail-classic-dark.css  gmail-classic.css  outlook-advanced-dark.css  outlook-advanced.css  proton-privacy-dark.css  proton-privacy.css
frontend/src/: README.md
frontend/src/app/: README.md  globals.css  layout.tsx  page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/email/: page.tsx
frontend/src/app/videos/: page.tsx
frontend/src/components/: README.md
frontend/src/hooks/: README.md  auth.ts  blog.ts  course.ts  courseVideo.ts  index.ts  video.ts
frontend/src/lib/: README.md  apiClient.ts  env.ts  queryClient.ts
frontend/src/stores/: README.md  auth.ts  index.ts  preferences.ts
frontend/src/styles/: README.md  auth.css  colors.css  components.css  index.css  theme-switcher.css  typography.css
frontend/src/types/: README.md  api.ts  platform.ts  preferences.ts
frontend/src/utils/: README.md  cookies.ts  index.ts  localStorage.ts
(+142 files in other folders)
